<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".presentation.view.activities.DetailsActivity"/>

    <LinearLayout
        android:id="@+id/linearContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/cityAndDate"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="Pancevo, 2020-07-10"/>

        <TextView
            android:id="@+id/maxTemp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/max_daily_temperature"/>

        <TextView
            android:id="@+id/minTemp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/min_daily_temperature"/>

        <TextView
            android:id="@+id/windSpeed"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/wind_speed"/>

        <TextView
            android:id="@+id/uv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/holo_purple"
            android:text="@string/ultraviolet_index"/>

    </LinearLayout>

</LinearLayout>
